# chatgpt-bot

./: Cargo.toml  Config.toml.example  Cross.toml  LICENSE  README.md  restart.bat
src/: config.rs  error.rs  main.rs  openai.rs  router.rs
src/handler/: kp.rs  mod.rs
src/model/: kp.rs  mod.rs
src/model/openai/: answers.rs  mod.rs  question.rs
