[package]
name = "chatgpt-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6.4", features = ["headers", "ws", "macros"] }
futures = "0.3.26"
hyper = { version = "0.14.24", features = ["full"] }
tokio = { version = "1.25.0", features = ["full"] }
tower = { version = "0.4.13", features = ["util"] }
tower-http = { version = "0.3.5", features = ["fs", "trace"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
headers = "0.3.8"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
config = "0.13.3"
once_cell = "1.17.0"
thiserror = "1.0.38"
rand = "0.8.5"
reqwest = { version = "0.11.14", features = ["default", "json"], optional = true }
curl = { version = "0.4.44", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
ratelimit = "0.5.1"

[features]
default = ["curl"]
curl-client = ["curl"]
reqwest-client = ["reqwest"]
